--- a/05-HPA/01_Deployment.yml
+++ b/05-HPA/01_Deployment.yml
@@ -20,7 +20,8 @@ spec:
        - containerPort: 80
        resources:
          limits:
-           cpu: 500m
+           cpu: 50m
+           memory: "40Mi"
          requests:
-           cpu: 200m
-...
+           cpu: 40m
+           memory: "50Mi"
