--- a/05-HPA/01_Deployment.yml
+++ b/05-HPA/01_Deployment.yml
@@ -1,27 +1,37 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: hpa-demo-deployment
+  name: php-apache
 spec:
- selector:
-   matchLabels:
-     run: hpa-demo-deployment
- replicas: 1
- template:
-   metadata:
-     labels:
-       run: hpa-demo-deployment
-   spec:
-     containers:
-     - name: hpa-demo-deployment
-       image: k8s.gcr.io/hpa-example
-       ports:
-       - containerPort: 80
-       resources:
-         limits:
-           cpu: 50m
-           memory: "40Mi"
-         requests:
-           cpu: 40m
-           memory: "50Mi"
+  selector:
+    matchLabels:
+      run: php-apache
+  template:
+    metadata:
+      labels:
+        run: php-apache
+    spec:
+      containers:
+      - name: php-apache
+        image: registry.k8s.io/hpa-example
+        ports:
+        - containerPort: 80
+        resources:
+          limits:
+            cpu: 50m
+            memory:20Mi
+          requests:
+            cpu: 20m
+            memory:10Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: php-apache
+  labels:
+    run: php-apache
+spec:
+  ports:
+  - port: 80
+  selector:
+    run: php-apache
