--- a/05-HPA/03_HPA.yml
+++ b/05-HPA/03_HPA.yml
@@ -1,14 +1,18 @@
----
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
- name: hpa-demo-deployment
+  name: php-apache
 spec:
- scaleTargetRef:
-   apiVersion: apps/v1
-   kind: Deployment
-   name: hpa-demo-deployment
- minReplicas: 1
- maxReplicas: 10
- targetCPUUtilizationPercentage: 50
-...
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: php-apache
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
