--- a/05-HPA/03_HPA.yml
+++ b/05-HPA/03_HPA.yml
@@ -16,3 +16,8 @@ spec:
       target:
         type: Utilization
         averageUtilization: 50
+
+# # Run this in a separate terminal
+# so that the load generation continues and you can carry on with the rest of the steps
+#kubectl run -i --tty load-generator --rm --image=busybox:1.28 --restart=Never -- /bin/sh -c "while sleep 0.01; do wget -q -O- http://php-apache; done"
+#kubectl get hpa php-apache --watch
